<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".auth.Signin">

    <EditText
        android:id="@+id/editTextEmailReg"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/editTextPasswordReg"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColorHint="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/editTextPasswordReg2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirmarContrasena"
        android:inputType="textPassword"
        android:textColorHint="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/editTextNickname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:textColorHint="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColorHint="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/editTextBiografia"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/biografia"
        android:inputType="textMultiLine"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/bRegSignin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        app:cornerRadius="50dp" />

    <Button
        android:id="@+id/bLoginSignin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciarSesion"
        android:textAllCaps="false"
        app:cornerRadius="50dp" />

</LinearLayout>