<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".auth.NuevoUsuarioGoogle">

    <EditText
        android:id="@+id/editTextNicknameGoogle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:textColorHint="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/editTextNombreGoogle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColorHint="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/editTextBiografiaGoogle"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/biografia"
        android:inputType="textMultiLine"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/bRegGoogle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        app:cornerRadius="50dp" />

    <Button
        android:id="@+id/bCancelarGoogle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:textAllCaps="false"
        app:cornerRadius="50dp" />

</LinearLayout>