<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".pantanllas.perfil.PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nicknameAutor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/Pacifico"
            android:text="@string/nickname"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_borrarAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/banear"
            android:visibility="gone" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_baneadoAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baneado"
        android:textColor="#FF0000"
        android:visibility="gone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_seguidoresAutor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seguirdores"
            android:textAlignment="center"
            android:textColor="#000000" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tv_publicacionAutor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/publicaciones"
            android:textAlignment="center"
            android:textColor="#000000" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tv_siguiendoAutor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/siguiendo"
            android:textAlignment="center"
            android:textColor="#000000" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_seguir"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/seguir"
        android:textAllCaps="false"
        app:cornerRadius="50dp" />

    <TextView
        android:id="@+id/tv_nombreAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_biografiaAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/descripcion"
        android:textColor="#000000" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_publicacionesPerfilAutor"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>