<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".pantanllas.nuevo.NuevoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="725dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_Padre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="Título"
                android:inputType="textPersonName"
                android:textSize="24sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/et_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Descripción"
                android:inputType="textMultiLine"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/iv_fotoReceta"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="0"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <Space
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/btn_camara"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/camara"
                    android:textAllCaps="false"
                    app:cornerRadius="50dp" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/btn_galeria"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/galeria"
                    android:textAllCaps="false"
                    app:cornerRadius="50dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:text="@string/categoria1"
                android:textColor="#000000" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <Spinner
                android:id="@+id/categoria1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:text="@string/categoria2"
                android:textColor="#000000" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <Spinner
                android:id="@+id/categoria2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_ingrediente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/ingredientes"
                android:textColor="#000000" />

            <View
                android:id="@+id/divIngrediente"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/et_ingrediente"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_anadirIngrediente"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/agregarIngrediente"
                android:textAllCaps="false"
                app:cornerRadius="50dp" />

            <TextView
                android:id="@+id/tv_pasos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/pasos"
                android:textColor="#000000" />

            <View
                android:id="@+id/divPaso"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/et_paso"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_anadirpaso"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/agregarPaso"
                android:textAllCaps="false"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_publicar"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/publicar"
                android:textAllCaps="false"
                app:cornerRadius="50dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="0" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>