<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantanllas.home.detallePublicacion.editarPublicacion.EditarPublicacionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="725dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_PadreEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_tituloEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="Título"
                android:inputType="textPersonName"
                android:textSize="24sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/et_descripcionEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Descripción"
                android:inputType="textMultiLine"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/iv_fotoRecetaEditar"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="0"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView2Editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:text="@string/categoria1"
                android:textColor="#000000" />

            <View
                android:id="@+id/divider2Editar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <Spinner
                android:id="@+id/categoria1Editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/textView3Editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:text="@string/categoria2"
                android:textColor="#000000" />

            <View
                android:id="@+id/dividerEditar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <Spinner
                android:id="@+id/categoriaEditar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/tv_ingredienteEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/ingredientes"
                android:textColor="#000000" />

            <View
                android:id="@+id/divIngredienteEditar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/et_ingredienteEditar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_anadirIngredienteEditar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/agregarIngrediente"
                android:textAllCaps="false"
                app:cornerRadius="50dp" />

            <TextView
                android:id="@+id/tv_pasos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/pasos"
                android:textColor="#000000" />

            <View
                android:id="@+id/divPasoEditar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/et_pasoEditar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_anadirpasoEditar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/agregarPaso"
                android:textAllCaps="false"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_publicarEditar"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/publicar"
                android:textAllCaps="false"
                app:cornerRadius="50dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="0" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>