<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.minichef_v1.pantanllas.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detallePublicacionFragment"
            app:destination="@id/detallePublicacionFragment" />
        <action
            android:id="@+id/action_navigation_home_to_listadoUsuariosFragment"
            app:destination="@id/listadoUsuariosFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.minichef_v1.pantanllas.nuevo.NuevoFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_nuevo" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.minichef_v1.pantanllas.perfil.PerfilFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_navigation_perfil_to_detallePublicacionFragment"
            app:destination="@id/detallePublicacionFragment" />
        <action
            android:id="@+id/action_navigation_perfil_to_editarFragment"
            app:destination="@id/editarFragment" />
    </fragment>
    <fragment
        android:id="@+id/detallePublicacionFragment"
        android:name="com.example.minichef_v1.pantanllas.home.detallePublicacion.DetallePublicacionFragment"
        android:label="fragment_detalle_publicacion"
        tools:layout="@layout/fragment_detalle_publicacion" >
        <action
            android:id="@+id/action_detallePublicacionFragment_to_autorFragment"
            app:destination="@id/autorFragment" />
        <action
            android:id="@+id/action_detallePublicacionFragment_to_navigation_perfil"
            app:destination="@id/navigation_perfil" />
        <action
            android:id="@+id/action_detallePublicacionFragment_to_editarPublicacionFragment"
            app:destination="@id/editarPublicacionFragment" />
    </fragment>
    <fragment
        android:id="@+id/autorFragment"
        android:name="com.example.minichef_v1.pantanllas.home.detallePublicacion.autor.AutorFragment"
        android:label="AutorFragment" >
        <action
            android:id="@+id/action_autorFragment_to_detallePublicacionFragment"
            app:destination="@id/detallePublicacionFragment" />
    </fragment>
    <fragment
        android:id="@+id/editarFragment"
        android:name="com.example.minichef_v1.pantanllas.perfil.editar.EditarFragment"
        android:label="fragment_editar"
        tools:layout="@layout/fragment_editar" >
        <action
            android:id="@+id/action_editarFragment_to_navigation_perfil"
            app:destination="@id/navigation_perfil"
            app:popUpTo="@id/navigation_perfil"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/listadoPublicacionesFragment"
        android:name="com.example.minichef_v1.pantanllas.home.viewPager2.listadoPublicaciones.ListadoPublicacionesFragment"
        android:label="fragment_listado_publicaciones"
        tools:layout="@layout/fragment_listado_publicaciones" />
    <fragment
        android:id="@+id/listadoUsuariosFragment"
        android:name="com.example.minichef_v1.pantanllas.home.listadoUsuarios.ListadoUsuariosFragment"
        android:label="fragment_listado_usuarios"
        tools:layout="@layout/fragment_listado_usuarios" >
        <action
            android:id="@+id/action_listadoUsuariosFragment_to_autorFragment"
            app:destination="@id/autorFragment" />
        <action
            android:id="@+id/action_listadoUsuariosFragment_to_navigation_perfil"
            app:destination="@id/navigation_perfil" />
    </fragment>
    <fragment
        android:id="@+id/editarPublicacionFragment"
        android:name="com.example.minichef_v1.pantanllas.home.detallePublicacion.editarPublicacion.EditarPublicacionFragment"
        android:label="fragment_editar_publicacion"
        tools:layout="@layout/fragment_editar_publicacion" >
        <action
            android:id="@+id/action_editarPublicacionFragment_to_detallePublicacionFragment"
            app:destination="@id/detallePublicacionFragment"
            app:popUpTo="@id/detallePublicacionFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>